--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+contourpy==1.3.2
 cppyy==3.5.0
 cppyy-backend==1.15.3
 cppyy-cling==6.32.8
 CPyCppyy==1.13.0
+cycler==0.12.1
+fonttools==4.60.1
+kiwisolver==1.4.9
+matplotlib==3.10.7
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
+tzdata==2025.2
